crates/utils/src/snapshots/obeli_sk_utils__wasm_tools__tests__exports_imports@test_programs_fibo_workflow.wasm_exports.snap
---
source: crates/utils/src/wasm_tools.rs
expression: exports
---
{
  "testing:fibo-workflow/workflow-nesting.fibo-nested-workflow": [
    [
      {
        "name": "n",
        "wit_type": "u8",
        "type_wrapper": "U8"
      }
    ],
    {
      "type_wrapper": "U64",
      "wit_type": "u64"
    }
  ],
  "testing:fibo-workflow/workflow-nesting.fibo-start-fiboas": [
    [
      {
        "name": "n",
        "wit_type": "u8",
        "type_wrapper": "U8"
      },
      {
        "name": "fiboas",
        "wit_type": "u32",
        "type_wrapper": "U32"
      },
      {
        "name": "iterations-per-fiboa",
        "wit_type": "u32",
        "type_wrapper": "U32"
      }
    ],
    {
      "type_wrapper": "U64",
      "wit_type": "u64"
    }
  ],
  "testing:fibo-workflow/workflow.fiboa": [
    [
      {
        "name": "n",
        "wit_type": "u8",
        "type_wrapper": "U8"
      },
      {
        "name": "iterations",
        "wit_type": "u32",
        "type_wrapper": "U32"
      }
    ],
    {
      "type_wrapper": "U64",
      "wit_type": "u64"
    }
  ],
  "testing:fibo-workflow/workflow.fiboa-concurrent": [
    [
      {
        "name": "n",
        "wit_type": "u8",
        "type_wrapper": "U8"
      },
      {
        "name": "iterations",
        "wit_type": "u32",
        "type_wrapper": "U32"
      }
    ],
    {
      "type_wrapper": "U64",
      "wit_type": "u64"
    }
  ],
  "testing:fibo-workflow/workflow.fibow": [
    [
      {
        "name": "n",
        "wit_type": "u8",
        "type_wrapper": "U8"
      },
      {
        "name": "iterations",
        "wit_type": "u32",
        "type_wrapper": "U32"
      }
    ],
    {
      "type_wrapper": "U64",
      "wit_type": "u64"
    }
  ]
}
