crates/utils/src/snapshots/obeli_sk_utils__wasm_tools__tests__params@test_programs_fibo_workflow.wasm_exports.snap
---
source: crates/utils/src/wasm_tools.rs
expression: exports
---
{
  "testing:fibo-workflow/workflow-nesting.fibo-nested-workflow": [
    {
      "name": "n",
      "wit_type": "u8"
    }
  ],
  "testing:fibo-workflow/workflow.fiboa": [
    {
      "name": "n",
      "wit_type": "u8"
    },
    {
      "name": "iterations",
      "wit_type": "u32"
    }
  ],
  "testing:fibo-workflow/workflow.fiboa-concurrent": [
    {
      "name": "n",
      "wit_type": "u8"
    },
    {
      "name": "iterations",
      "wit_type": "u32"
    }
  ],
  "testing:fibo-workflow/workflow.fibow": [
    {
      "name": "n",
      "wit_type": "u8"
    },
    {
      "name": "iterations",
      "wit_type": "u32"
    }
  ]
}
