crates/utils/src/snapshots/obeli_sk_utils__wasm_tools__tests__params@test_programs_fibo_workflow_component.wasm_exports.snap
---
source: crates/utils/src/wasm_tools.rs
expression: exports
---
{
  "testing:fibo-workflow/workflow.fiboa": {
    "ffqn": "testing:fibo-workflow/workflow.fiboa",
    "parameter_types": [
      {
        "type_wrapper": "u32",
        "name": "iterations",
        "wit_type": "u32"
      },
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      }
    ],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "u64",
          "err": null
        },
        "wit_type": "result<u64>"
      }
    },
    "extension": null,
    "submittable": true
  },
  "testing:fibo-workflow/workflow.fiboa-concurrent": {
    "ffqn": "testing:fibo-workflow/workflow.fiboa-concurrent",
    "parameter_types": [
      {
        "type_wrapper": "u32",
        "name": "iterations",
        "wit_type": "u32"
      },
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      }
    ],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "u64",
          "err": null
        },
        "wit_type": "result<u64>"
      }
    },
    "extension": null,
    "submittable": true
  },
  "testing:fibo-workflow/workflow.fiboa-submit-json": {
    "ffqn": "testing:fibo-workflow/workflow.fiboa-submit-json",
    "parameter_types": [
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      }
    ],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "u64",
          "err": null
        },
        "wit_type": "result<u64>"
      }
    },
    "extension": null,
    "submittable": true
  },
  "testing:fibo-workflow/workflow.fibow": {
    "ffqn": "testing:fibo-workflow/workflow.fibow",
    "parameter_types": [
      {
        "type_wrapper": "u32",
        "name": "iterations",
        "wit_type": "u32"
      },
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      }
    ],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "u64",
          "err": null
        },
        "wit_type": "result<u64>"
      }
    },
    "extension": null,
    "submittable": true
  },
  "testing:fibo-workflow/workflow.test-get-result-json-before-await": {
    "ffqn": "testing:fibo-workflow/workflow.test-get-result-json-before-await",
    "parameter_types": [],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": null,
          "err": "string"
        },
        "wit_type": "result<_, string>"
      }
    },
    "extension": null,
    "submittable": true
  },
  "testing:fibo-workflow/workflow.test-get-result-json-err-variant": {
    "ffqn": "testing:fibo-workflow/workflow.test-get-result-json-err-variant",
    "parameter_types": [],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": null,
          "err": "string"
        },
        "wit_type": "result<_, string>"
      }
    },
    "extension": null,
    "submittable": true
  },
  "testing:fibo-workflow/workflow.test-schedule-json": {
    "ffqn": "testing:fibo-workflow/workflow.test-schedule-json",
    "parameter_types": [],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "record { id: string }",
          "err": "string"
        },
        "wit_type": "result<execution-id, string>"
      }
    },
    "extension": null,
    "submittable": true
  },
  "testing:fibo-workflow/workflow.test-submit-json-malformed-params": {
    "ffqn": "testing:fibo-workflow/workflow.test-submit-json-malformed-params",
    "parameter_types": [],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": null,
          "err": "string"
        },
        "wit_type": "result<_, string>"
      }
    },
    "extension": null,
    "submittable": true
  },
  "testing:fibo-workflow/workflow.test-submit-json-unknown-ffqn": {
    "ffqn": "testing:fibo-workflow/workflow.test-submit-json-unknown-ffqn",
    "parameter_types": [],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": null,
          "err": "string"
        },
        "wit_type": "result<_, string>"
      }
    },
    "extension": null,
    "submittable": true
  }
}
