crates/utils/src/snapshots/obeli_sk_utils__wasm_tools__tests__params@test_programs_fibo_workflow_component.wasm_imports.snap
---
source: crates/utils/src/wasm_tools.rs
expression: imports
---
{
  "obelisk:workflow/workflow-support@6.0.0.execution-id-generate": {
    "ffqn": "obelisk:workflow/workflow-support@6.0.0.execution-id-generate",
    "parameter_types": [],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "record { id: string }",
        "wit_type": "execution-id"
      }
    },
    "extension": null,
    "submittable": false
  },
  "obelisk:workflow/workflow-support@6.0.0.get-result-json": {
    "ffqn": "obelisk:workflow/workflow-support@6.0.0.get-result-json",
    "parameter_types": [
      {
        "type_wrapper": "record { id: string }",
        "name": "execution-id",
        "wit_type": "execution-id"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<result<option<string>, option<string>>, variant { execution-id-parsing-error(string), not-found-in-processed-responses }>",
        "wit_type": "result<result<option<string>, option<string>>, get-result-json-error>"
      }
    },
    "extension": null,
    "submittable": false
  },
  "obelisk:workflow/workflow-support@6.0.0.schedule-json": {
    "ffqn": "obelisk:workflow/workflow-support@6.0.0.schedule-json",
    "parameter_types": [
      {
        "type_wrapper": "record { id: string }",
        "name": "execution-id",
        "wit_type": "execution-id"
      },
      {
        "type_wrapper": "variant { now, at(record { seconds: u64, nanoseconds: u32 }), in(variant { milliseconds(u64), seconds(u64), minutes(u32), hours(u32), days(u32) }) }",
        "name": "schedule-at",
        "wit_type": "schedule-at"
      },
      {
        "type_wrapper": "record { interface-name: string, function-name: string }",
        "name": "function",
        "wit_type": "function"
      },
      {
        "type_wrapper": "string",
        "name": "params",
        "wit_type": "string"
      }
    ],
    "return_type": {
      "non_extendable": {
        "type_wrapper": "result<_, variant { ffqn-parsing-error(string), function-not-found, type-check-error(string) }>",
        "wit_type": "result<_, schedule-json-error>"
      }
    },
    "extension": null,
    "submittable": false
  },
  "testing:fibo/fibo.fibo": {
    "ffqn": "testing:fibo/fibo.fibo",
    "parameter_types": [
      {
        "type_wrapper": "u8",
        "name": "n",
        "wit_type": "u8"
      }
    ],
    "return_type": {
      "extendable": {
        "type_wrapper_tl": {
          "ok": "u64",
          "err": null
        },
        "wit_type": "result<u64>"
      }
    },
    "extension": null,
    "submittable": false
  }
}
